@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "2.1.4"
+#define KPPPVERSION "2.2.0"
 #endif
