@@ -1,3 +1,8 @@
+2004-04-24  Harri Porten  <porten@kde.org>
+
+	* connect.cpp: added patch by Dmitri that allows automatic redials
+	on NO CARRIER.
+
 2004-04-12  Gerardo Puga  <gpuga@gioia.ing.unlp.edu.ar>
 
 	* Now kppp will notify other applications using DCOP about 
